traces/bug_319.txt
examples++-load/Element_P3.cpp:294: error: DEAD_STORE
  The value written to &d (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_P3.cpp:294:13: Write of unused value
292.               typedef Element E;
293.               int n=this->NbDoF;
294.               const int d= E::Rd::d;
                   ^
295.               bool dd = verbosity>5;
296.               if(dd)
